# whisper_streaming

./: README3.md  Readme3.md  Tiltfile  pyproject.toml  web_app.py  whisper_online.py  whisper_server.py
docker/: Dockerfile  deployment.prod.yaml  deployment.yaml
src/vad/: vad_interface.py  vad_rms.py  vad_silero.py  whisper_server_TODO.py
static/: index.html
